--- a/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.interfaces.shapeloadoptions.yml
+++ b/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.interfaces.shapeloadoptions.yml
@@ -4,7 +4,7 @@ uid: powerpoint!PowerPoint.Interfaces.ShapeLoadOptions:interface
 package: powerpoint!
 fullName: PowerPoint.Interfaces.ShapeLoadOptions
 summary: >-
-  代表幻灯片中的单个形状。
+  表示幻灯片中的单个形状。
 
 
   \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
@@ -17,7 +17,7 @@ properties:
   uid: powerpoint!PowerPoint.Interfaces.ShapeLoadOptions#$all:member
   package: powerpoint!
   fullName: $all
-  summary: 为 `$all` LoadOptions 指定将加载所有标量 (，例如： `Range.address`<!-- -->) 导航属性， (属性，例如： `Range.format.fill.color`<!-- -->).
+  summary: 指定 `$all` LoadOptions 将加载所有标量 (，例如： `Range.address`<!-- -->) 导航属性， (属性，例如： `Range.format.fill.color`<!-- -->).
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -30,7 +30,7 @@ properties:
   package: powerpoint!
   fullName: id
   summary: >-
-    获取形状的唯一 ID。
+    获取形状的唯一 ID。 `id`在幻灯片中是唯一的。
 
 
     \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
@@ -42,9 +42,9 @@ properties:
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: 3bcc3d916203c245de30b99f381ab2d0b991a0ac
-  ms.sourcegitcommit: f229afdd4c2bc820ac799394a77b637fc66e87b4
+  ms.openlocfilehash: 01b3a13b1a23f809cadc976aabbcf3fa5491c0d4
+  ms.sourcegitcommit: 0649842a034c42b1c1ec0b56c5ac3144ff51a849
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/27/2021
-  ms.locfileid: "49992721"
+  ms.lasthandoff: 03/12/2021
+  ms.locfileid: "50756338"
