--- a/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.interfaces.tagloadoptions.yml
+++ b/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.interfaces.tagloadoptions.yml
@@ -1,10 +1,10 @@
 ### YamlMime:TSType
-name: PowerPoint.Interfaces.ShapeCollectionLoadOptions
-uid: powerpoint!PowerPoint.Interfaces.ShapeCollectionLoadOptions:interface
+name: PowerPoint.Interfaces.TagLoadOptions
+uid: powerpoint!PowerPoint.Interfaces.TagLoadOptions:interface
 package: powerpoint!
-fullName: PowerPoint.Interfaces.ShapeCollectionLoadOptions
+fullName: PowerPoint.Interfaces.TagLoadOptions
 summary: >-
-  代表形状的集合。
+  表示幻灯片中的单个标记。
 
 
   \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
@@ -14,7 +14,7 @@ isDeprecated: false
 type: interface
 properties:
 - name: $all
-  uid: powerpoint!PowerPoint.Interfaces.ShapeCollectionLoadOptions#$all:member
+  uid: powerpoint!PowerPoint.Interfaces.TagLoadOptions#$all:member
   package: powerpoint!
   fullName: $all
   summary: 指定 `$all` LoadOptions 将加载所有标量 (，例如： `Range.address`<!-- -->) 导航属性， (属性，例如： `Range.format.fill.color`<!-- -->).
@@ -25,12 +25,12 @@ properties:
     content: '$all?: boolean;'
     return:
       type: boolean
-- name: id
-  uid: powerpoint!PowerPoint.Interfaces.ShapeCollectionLoadOptions#id:member
+- name: key
+  uid: powerpoint!PowerPoint.Interfaces.TagLoadOptions#key:member
   package: powerpoint!
-  fullName: id
+  fullName: key
   summary: >-
-    对于集合中的每个项目：获取形状的唯一 ID。 `id`在幻灯片中是唯一的。
+    获取标记的唯一 ID。 `key`在拥有中是唯一的， `TagCollection` 并且始终在文档中存储为大写字母。
 
 
     \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
@@ -38,13 +38,29 @@ properties:
   isPreview: true
   isDeprecated: false
   syntax:
-    content: 'id?: boolean;'
+    content: 'key?: boolean;'
+    return:
+      type: boolean
+- name: value
+  uid: powerpoint!PowerPoint.Interfaces.TagLoadOptions#value:member
+  package: powerpoint!
+  fullName: value
+  summary: >-
+    获取标记的值。
+
+
+    \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'value?: boolean;'
     return:
       type: boolean
 metadata:
-  ms.openlocfilehash: 3726dc68e67afbb9ff9ada45bc2889cd883f0d9a
+  ms.openlocfilehash: e9e7d53f6e0ff775e4dd56c189b615d7d7eab40a
   ms.sourcegitcommit: 0649842a034c42b1c1ec0b56c5ac3144ff51a849
   ms.translationtype: MT
   ms.contentlocale: zh-CN
   ms.lasthandoff: 03/12/2021
-  ms.locfileid: "50756380"
+  ms.locfileid: "50756563"
