--- a/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.interfaces.tagupdatedata.yml
+++ b/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.interfaces.tagupdatedata.yml
@@ -1,20 +1,20 @@
 ### YamlMime:TSType
-name: PowerPoint.Interfaces.ShapeData
-uid: powerpoint!PowerPoint.Interfaces.ShapeData:interface
+name: PowerPoint.Interfaces.TagUpdateData
+uid: powerpoint!PowerPoint.Interfaces.TagUpdateData:interface
 package: powerpoint!
-fullName: PowerPoint.Interfaces.ShapeData
-summary: 描述通过调用返回的数据的接口 `shape.toJSON()`<!-- -->.
+fullName: PowerPoint.Interfaces.TagUpdateData
+summary: 用于更新 Tag 对象上数据的接口，用于 `tag.set({ ... })`<!-- -->.
 remarks: ''
 isPreview: false
 isDeprecated: false
 type: interface
 properties:
-- name: id
-  uid: powerpoint!PowerPoint.Interfaces.ShapeData#id:member
+- name: value
+  uid: powerpoint!PowerPoint.Interfaces.TagUpdateData#value:member
   package: powerpoint!
-  fullName: id
+  fullName: value
   summary: >-
-    获取形状的唯一 ID。 `id`在幻灯片中是唯一的。
+    获取标记的值。
 
 
     \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
@@ -22,13 +22,13 @@ properties:
   isPreview: true
   isDeprecated: false
   syntax:
-    content: 'id?: string;'
+    content: 'value?: string;'
     return:
       type: string
 metadata:
-  ms.openlocfilehash: 2eef59c8b6cfb65190da8dc42f3566756fd33a9f
+  ms.openlocfilehash: c7b76e4f352a4b89c35e43110582b3d1157f57b4
   ms.sourcegitcommit: 0649842a034c42b1c1ec0b56c5ac3144ff51a849
   ms.translationtype: MT
   ms.contentlocale: zh-CN
   ms.lasthandoff: 03/12/2021
-  ms.locfileid: "50756345"
+  ms.locfileid: "50756565"
