--- a/docs/docs-ref-autogen/office/office/office.removehandleroptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.removehandleroptions.yml
@@ -3,7 +3,7 @@ name: Office.RemoveHandlerOptions
 uid: office!Office.RemoveHandlerOptions:interface
 package: office!
 fullName: Office.RemoveHandlerOptions
-summary: 提供用于确定要删除的事件处理程序或处理程序的选项。
+summary: 提供用于确定要删除的事件处理程序的选项。
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -13,7 +13,7 @@ properties:
   uid: office!Office.RemoveHandlerOptions#asyncContext:member
   package: office!
   fullName: asyncContext
-  summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。
+  summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的任何类型的用户定义项，保持不变。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -25,18 +25,18 @@ properties:
   uid: office!Office.RemoveHandlerOptions#handler:member
   package: office!
   fullName: handler
-  summary: '要删除的处理程序。 如果未指定特定处理程序，则将删除指定事件类型的所有处理程序。 `BindingEventHandler`类型定义方式为`type BindingEventHandler = (eventArgs?: Office.BindingDataChangedEventArgs | Office.BindingSelectionChangedEventArgs) => any`<!-- -->.'
+  summary: 要删除的处理程序。 如果未指定特定处理程序，则删除指定事件类型的所有处理程序。
   remarks: ''
   isPreview: false
   isDeprecated: false
   syntax:
-    content: 'handler?: BindingEventHandler'
+    content: 'handler?: (eventArgs?: Office.BindingDataChangedEventArgs | Office.BindingSelectionChangedEventArgs) => any;'
     return:
-      type: <xref uid="office!Office.BindingEventHandler:type" />
+      type: '(eventArgs?: <xref uid="office!Office.BindingDataChangedEventArgs:interface" /> | <xref uid="office!Office.BindingSelectionChangedEventArgs:interface" />) =&gt; any'
 metadata:
-  ms.openlocfilehash: 48e577323629c838188d8a457c81b186bb65aa3e
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: ab6aeddbf74ed429236c75fe66571fac40095659
+  ms.sourcegitcommit: 0649842a034c42b1c1ec0b56c5ac3144ff51a849
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49251351"
+  ms.lasthandoff: 03/12/2021
+  ms.locfileid: "50756408"
