--- a/docs/docs-ref-autogen/powerpoint/powerpoint.yml
+++ b/docs/docs-ref-autogen/powerpoint/powerpoint.yml
@@ -29,6 +29,12 @@ interfaces:
 - powerpoint!PowerPoint.Interfaces.SlideMasterCollectionUpdateData:interface
 - powerpoint!PowerPoint.Interfaces.SlideMasterData:interface
 - powerpoint!PowerPoint.Interfaces.SlideMasterLoadOptions:interface
+- powerpoint!PowerPoint.Interfaces.TagCollectionData:interface
+- powerpoint!PowerPoint.Interfaces.TagCollectionLoadOptions:interface
+- powerpoint!PowerPoint.Interfaces.TagCollectionUpdateData:interface
+- powerpoint!PowerPoint.Interfaces.TagData:interface
+- powerpoint!PowerPoint.Interfaces.TagLoadOptions:interface
+- powerpoint!PowerPoint.Interfaces.TagUpdateData:interface
 classes:
 - powerpoint!PowerPoint.Application:class
 - powerpoint!PowerPoint.Presentation:class
@@ -41,6 +47,8 @@ classes:
 - powerpoint!PowerPoint.SlideLayoutCollection:class
 - powerpoint!PowerPoint.SlideMaster:class
 - powerpoint!PowerPoint.SlideMasterCollection:class
+- powerpoint!PowerPoint.Tag:class
+- powerpoint!PowerPoint.TagCollection:class
 enums:
 - powerpoint!PowerPoint.ErrorCodes:enum
 - powerpoint!PowerPoint.InsertSlideFormatting:enum
@@ -68,7 +76,7 @@ functions:
 - name: PowerPoint.run(batch)
   uid: powerpoint!PowerPoint.run:function(1)
   package: powerpoint!
-  summary: 使用新的 RequestContext 执行对 PowerPoint 对象模型执行动作的批处理脚本。 当承诺得到解析时，在执行期间自动分配的任何跟踪对象都将释放。
+  summary: 使用新的 RequestContext 执行对 PowerPoint 对象模型执行动作的批处理脚本。 当实现承诺时，将释放在执行期间自动分配的任何跟踪对象。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -76,7 +84,7 @@ functions:
     content: 'export function run<T>(batch: (context: PowerPoint.RequestContext) => OfficeExtension.IPromise<T>): OfficeExtension.IPromise<T>;'
     parameters:
     - id: batch
-      description: 一个接受 RequestContext 并返回承诺 (的函数，通常只是"context.sync () ") 。 上下文参数可促进对 PowerPoint 应用程序的请求。 由于 Office 加载项和 PowerPoint 应用程序在两个不同的进程中运行，因此 RequestContext 需要从加载项访问 PowerPoint 对象模型。
+      description: 一个接受 RequestContext 并返回承诺 (的函数，通常只是"context.sync () ") 。 context 参数便于对 PowerPoint 应用程序的请求。 由于 Office 加载项和 PowerPoint 应用程序在两个不同的进程中运行，因此 RequestContext 需要从加载项访问 PowerPoint 对象模型。
       type: '(context: <xref uid="powerpoint!PowerPoint.RequestContext:class" />) =&gt; <xref uid="office!OfficeExtension.IPromise:type" />&lt;T&gt;'
     return:
       type: <xref uid="office!OfficeExtension.IPromise:type" />&lt;T&gt;
@@ -84,7 +92,7 @@ functions:
 - name: PowerPoint.run(object, batch)
   uid: powerpoint!PowerPoint.run:function(2)
   package: powerpoint!
-  summary: 使用以前创建的 API 对象的 RequestContext 执行对 PowerPoint 对象模型执行动作的批处理脚本。 当承诺得到解析时，在执行期间自动分配的任何跟踪对象都将释放。
+  summary: 使用以前创建的 API 对象的 RequestContext 对 PowerPoint 对象模型执行操作，执行批处理脚本。 当实现承诺时，将释放在执行期间自动分配的任何跟踪对象。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -92,10 +100,10 @@ functions:
     content: 'export function run<T>(object: OfficeExtension.ClientObject, batch: (context: PowerPoint.RequestContext) => OfficeExtension.IPromise<T>): OfficeExtension.IPromise<T>;'
     parameters:
     - id: object
-      description: 以前创建的 API 对象。 批处理将使用与传入对象相同的 RequestContext，这意味着应用于该对象的任何更改都将由"context.sync () "选取。
+      description: 以前创建的 API 对象。 批处理将使用与传入对象相同的 RequestContext，这意味着应用于该对象的任何更改都将由"context.sync () "进行选取。
       type: <xref uid="office!OfficeExtension.ClientObject:class" />
     - id: batch
-      description: 一个接受 RequestContext 并返回承诺 (的函数，通常只是"context.sync () ") 。 上下文参数可促进对 PowerPoint 应用程序的请求。 由于 Office 加载项和 PowerPoint 应用程序在两个不同的进程中运行，因此 RequestContext 需要从加载项访问 PowerPoint 对象模型。
+      description: 一个接受 RequestContext 并返回承诺 (的函数，通常只是"context.sync () ") 。 context 参数便于对 PowerPoint 应用程序的请求。 由于 Office 加载项和 PowerPoint 应用程序在两个不同的进程中运行，因此 RequestContext 需要从加载项访问 PowerPoint 对象模型。
       type: '(context: <xref uid="powerpoint!PowerPoint.RequestContext:class" />) =&gt; <xref uid="office!OfficeExtension.IPromise:type" />&lt;T&gt;'
     return:
       type: <xref uid="office!OfficeExtension.IPromise:type" />&lt;T&gt;
@@ -103,7 +111,7 @@ functions:
 - name: PowerPoint.run(objects, batch)
   uid: powerpoint!PowerPoint.run:function(3)
   package: powerpoint!
-  summary: 使用以前创建的 API 对象的 RequestContext 执行对 PowerPoint 对象模型执行动作的批处理脚本。
+  summary: 使用以前创建的 API 对象的 RequestContext 对 PowerPoint 对象模型执行操作，执行批处理脚本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -111,18 +119,18 @@ functions:
     content: 'export function run<T>(objects: OfficeExtension.ClientObject[], batch: (context: PowerPoint.RequestContext) => OfficeExtension.IPromise<T>): OfficeExtension.IPromise<T>;'
     parameters:
     - id: objects
-      description: 以前创建的 API 对象数组。 将验证数组以确保所有对象共享同一上下文。 批处理将使用此共享 RequestContext，这意味着应用到这些对象的任何更改都将由"context.sync () "选取。
+      description: 由以前创建的 API 对象数组。 将验证数组以确保所有对象共享同一上下文。 批处理将使用此共享 RequestContext，这意味着应用到这些对象的任何更改都将由"context.sync () "。
       type: <xref uid="office!OfficeExtension.ClientObject:class" />[]
     - id: batch
-      description: 一个接受 RequestContext 并返回承诺 (的函数，通常只是"context.sync () ") 。 上下文参数可促进对 PowerPoint 应用程序的请求。 由于 Office 加载项和 PowerPoint 应用程序在两个不同的进程中运行，因此 RequestContext 需要从加载项访问 PowerPoint 对象模型。
+      description: 一个接受 RequestContext 并返回承诺 (的函数，通常只是"context.sync () ") 。 context 参数便于对 PowerPoint 应用程序的请求。 由于 Office 加载项和 PowerPoint 应用程序在两个不同的进程中运行，因此 RequestContext 需要从加载项访问 PowerPoint 对象模型。
       type: '(context: <xref uid="powerpoint!PowerPoint.RequestContext:class" />) =&gt; <xref uid="office!OfficeExtension.IPromise:type" />&lt;T&gt;'
     return:
       type: <xref uid="office!OfficeExtension.IPromise:type" />&lt;T&gt;
       description: ''
 metadata:
-  ms.openlocfilehash: 744b2e63b6d1717dc6a5dba09a4789742c2f7ad9
-  ms.sourcegitcommit: f229afdd4c2bc820ac799394a77b637fc66e87b4
+  ms.openlocfilehash: 1ddf49e5e032061c0948d5dabba8fe72b1c4feae
+  ms.sourcegitcommit: 0649842a034c42b1c1ec0b56c5ac3144ff51a849
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/27/2021
-  ms.locfileid: "49991917"
+  ms.lasthandoff: 03/12/2021
+  ms.locfileid: "50756394"
