--- a/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.presentation.yml
+++ b/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.presentation.yml
@@ -13,7 +13,7 @@ properties:
   uid: powerpoint!PowerPoint.Presentation#context:member
   package: powerpoint!
   fullName: context
-  summary: 与对象关联的请求上下文。 这会将外接程序的进程连接到 Office 主机应用程序的进程。
+  summary: 与对象关联的请求上下文。 这会将加载项进程连接到 Office 主机应用程序的进程。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -26,7 +26,7 @@ properties:
   package: powerpoint!
   fullName: slideMasters
   summary: >-
-    返回演示文稿 `SlideMaster` 中对象的集合。
+    返回演示文稿 `SlideMaster` 中的对象的集合。
 
 
     \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
@@ -53,6 +53,22 @@ properties:
     content: 'readonly slides: PowerPoint.SlideCollection;'
     return:
       type: <xref uid="powerpoint!PowerPoint.SlideCollection:class" />
+- name: tags
+  uid: powerpoint!PowerPoint.Presentation#tags:member
+  package: powerpoint!
+  fullName: tags
+  summary: >-
+    返回附加到演示文稿的标记的集合。
+
+
+    \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'readonly tags: PowerPoint.TagCollection;'
+    return:
+      type: <xref uid="powerpoint!PowerPoint.TagCollection:class" />
 - name: title
   uid: powerpoint!PowerPoint.Presentation#title:member
   package: powerpoint!
@@ -140,7 +156,7 @@ methods:
               }): PowerPoint.Presentation;
     parameters:
     - id: propertyNamesAndPaths
-      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，它是一个以逗号分隔的字符串，用于指定要加载的 `propertyNamesAndPaths.expand` 导航属性。'
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，它是一个以逗号分隔的字符串，用于指定要加载 `propertyNamesAndPaths.expand` 的导航属性。'
       type: >-
         {
                     select?: string;
@@ -153,7 +169,7 @@ methods:
   uid: powerpoint!PowerPoint.Presentation#toJSON:member(1)
   package: powerpoint!
   fullName: toJSON()
-  summary: 重写 JavaScript 方法，以便向 API 对象 `toJSON()` 传递时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给该对象的对象的方法。) 而原始 PowerPoint.Presentation 对象是一个 API 对象，该方法返回一个纯 `toJSON` JavaScript 对象， (类型为 `toJSON``PowerPoint.Interfaces.PresentationData`<!-- -->) 原始对象中任何加载的子属性的浅表副本。
+  summary: 重写 JavaScript `toJSON()` 方法，以便向 API 对象传递时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给它的对象的 方法。) 而原始 PowerPoint.Presentation 对象是 API 对象，该方法返回一个纯 JavaScript 对象 (键入 `toJSON` `toJSON` 为 `PowerPoint.Interfaces.PresentationData`<!-- -->) 包含原始对象中任何加载的子属性的浅表副本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -164,9 +180,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 48b379dd4206f3cbfeb1cd5922a4ab14f4ff1d17
-  ms.sourcegitcommit: 7a78c85d4a5378180c50442becb98dd816065c5c
+  ms.openlocfilehash: 105ead7a76a6faaa8492ba02c693c9dd6bb8f40f
+  ms.sourcegitcommit: 0649842a034c42b1c1ec0b56c5ac3144ff51a849
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 03/10/2021
-  ms.locfileid: "50607590"
+  ms.lasthandoff: 03/12/2021
+  ms.locfileid: "50756317"
