--- a/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.slide.yml
+++ b/docs/docs-ref-autogen/powerpoint/powerpoint/powerpoint.slide.yml
@@ -17,7 +17,7 @@ properties:
   uid: powerpoint!PowerPoint.Slide#context:member
   package: powerpoint!
   fullName: context
-  summary: 与对象关联的请求上下文。 这会将外接程序的进程连接到 Office 主机应用程序的进程。
+  summary: 与对象关联的请求上下文。 这会将加载项进程连接到 Office 主机应用程序的进程。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -89,6 +89,22 @@ properties:
     content: 'readonly slideMaster: PowerPoint.SlideMaster;'
     return:
       type: <xref uid="powerpoint!PowerPoint.SlideMaster:class" />
+- name: tags
+  uid: powerpoint!PowerPoint.Slide#tags:member
+  package: powerpoint!
+  fullName: tags
+  summary: >-
+    返回幻灯片中的标记集合。
+
+
+    \[[API 集：PowerPointApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/powerpoint-api-requirement-sets)\]
+  remarks: ''
+  isPreview: true
+  isDeprecated: false
+  syntax:
+    content: 'readonly tags: PowerPoint.TagCollection;'
+    return:
+      type: <xref uid="powerpoint!PowerPoint.TagCollection:class" />
 methods:
 - name: delete()
   uid: powerpoint!PowerPoint.Slide#delete:member(1)
@@ -157,7 +173,7 @@ methods:
               }): PowerPoint.Slide;
     parameters:
     - id: propertyNamesAndPaths
-      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，它是一个以逗号分隔的字符串，用于指定要加载的 `propertyNamesAndPaths.expand` 导航属性。'
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，它是一个以逗号分隔的字符串，用于指定要加载 `propertyNamesAndPaths.expand` 的导航属性。'
       type: >-
         {
                     select?: string;
@@ -170,7 +186,7 @@ methods:
   uid: powerpoint!PowerPoint.Slide#toJSON:member(1)
   package: powerpoint!
   fullName: toJSON()
-  summary: 重写 JavaScript 方法，以便向 API 对象传递 `toJSON()` 时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给该对象的对象的方法。) 而原始 PowerPoint.Slide 对象是一个 API 对象，该方法返回一个类型为 (`toJSON` `toJSON` JavaScript 对象 `PowerPoint.Interfaces.SlideData`<!-- -->) 包含原始对象中任何加载的子属性的浅表副本。
+  summary: 重写 JavaScript `toJSON()` 方法，以便向 API 对象传递时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给它的对象的 方法。) 而原始 PowerPoint.Slide 对象是 API 对象，该方法返回一个纯 JavaScript 对象 (键入 `toJSON` `toJSON` 为 `PowerPoint.Interfaces.SlideData`<!-- -->) 包含原始对象中任何加载的子属性的浅表副本。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -181,9 +197,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 81c6345b0f3ba58f16c1bfc7cbf33887584083af
-  ms.sourcegitcommit: f229afdd4c2bc820ac799394a77b637fc66e87b4
+  ms.openlocfilehash: c38952c0b148c25e075c1be1c6ffadf8038e0d09
+  ms.sourcegitcommit: 0649842a034c42b1c1ec0b56c5ac3144ff51a849
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/27/2021
-  ms.locfileid: "49992406"
+  ms.lasthandoff: 03/12/2021
+  ms.locfileid: "50756289"
